--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../styles/global.scss";
+
 .home-container {
     padding: 30px 40px;
     height: 100%;
@@ -55,8 +57,12 @@
 //For new home page
 
 .home-main-area {
-  padding-top:10px;
   padding-left: 30px;
+}
+
+.home-title-container {
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .home-title-text {
@@ -81,8 +87,8 @@
 
 
 .section-container {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
 
 .home-tiles {
@@ -104,4 +110,8 @@
 .home-spinner {
   display: flex;
   margin-top: 20px;
+}
+
+.home-main-area a {
+  color: #0078D4;;
 }
