--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -1,13 +1,10 @@
 <div *ngIf="detectorDataLocalCopy">
   <div *ngIf="((!hideDetectorHeader && !analysisMode) || isPopoutFromAnalysis) && !isInCaseSubmission()">
     <section class="content-header">
-      <h2>
-        <span class="blade-title" tabindex="0" id="detector-name" *ngIf="!isSystemInvoker && !insideDetectorList">
-          {{detectorDataLocalCopy.metadata.name}}
-        </span>
-        <span class="blade-description">
-           - {{detectorDataLocalCopy.metadata.description}}
-        </span>
+      <h2 style="display: flex;">
+        <div *ngIf="!isSystemInvoker && !insideDetectorList" tabindex="0" id="detector-name">{{detectorDataLocalCopy.metadata.name}}</div>
+        <div *ngIf="!isSystemInvoker && !insideDetectorList" class="blade-description">&nbsp;- &nbsp;</div>
+        <div class="blade-description">{{detectorDataLocalCopy.metadata.description}}</div>
       </h2>
       <section *ngIf="!isPublic">
         <div class="description">By
