--- a/AngularApp/projects/diagnostic-data/src/lib/components/card-selection-v4/card-selection-v4.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/card-selection-v4/card-selection-v4.component.scss
@@ -1,28 +1,38 @@
-.card-container {
-    flex: 0 0 35%;
-    padding: 10px;
-    min-height: 110px;
-    border: 1px solid rgb(118,118,118);
-    box-shadow: 3px 3px rgb(214,214,214);
-    margin: 10px 10px 10px 0px;
+@import "../../../../../app-service-diagnostics/src/app/fabric-ui/components/category-tile-v4/category-tile-v4.component.scss";
+
+//Style is align with category tiles in home page
+
+.card-tiles {
+  display: flex; 
+  flex-wrap: wrap;
+  align-content: center;
+  margin-top: -15px;
 }
 
-.card-container:hover {
-    cursor: pointer;
+
+.card-tile-container {
+    @extend .category-tile-container
 }
 
-.card-header {
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: 500;
+.card-tile {
+    margin-top: 7px;
+    margin-bottom: 7px;
+    margin-right: 15px;
 }
 
-.card-description {
-    font-size: 12px;
-    line-height: 22px;
+.card-tile :hover {
+    background-color: $tile-homepage-hover-background;
 }
 
-.card-flex {
-    display: flex;
-    flex-wrap: wrap;
+.card-tile-image {
+    @extend .tile-image
+}
+
+
+.card-tile-title {
+    @extend .tile-title
+}
+
+.card-tile-description {
+    @extend .tile-description
 }
