--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -26,12 +26,8 @@
                 </div>
               </div>
               <div *ngIf="!this.selectedResourceType.caseId" class="col-md-6">
-                <label>Resource Name</label>
+                <label>{{this.selectedResourceType.resourceTypeLabel}}</label>
                 <input class="form-control" [(ngModel)]="resourceName" name="resourceName" type="text" aria-describedby="nameHelp" placeholder="Enter resource name">
-              </div>
-              <div  *ngIf="this.selectedResourceType.caseId" class="col-md-6">
-                <label>Case Number</label>
-                <input class="form-control" [(ngModel)]="resourceName" name="resourceName" type="text" aria-describedby="nameHelp" placeholder="Enter case number">
               </div>
             </div>
             <div class="form-row" *ngIf="!this.selectedResourceType.caseId">
