Add keystone rendering and container

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
@@ -1,19 +1,71 @@
-<detector-container *ngIf="displayDetectorContainer" [detector]="analysisDetector" [hideDetectorControl]='isCaseSubmissionSolutionIFrame' [isAnalysisView]="true" (downTimeChanged)="onDowntimeChanged($event)"></detector-container>
-<div *ngIf="showSearchBar" class="search-box">
+<div *ngIf="keywordsSolutionView else genericAnalysisView" class="keyword-solution-container">
+  <detector-control *ngIf="keywordsSolutionView"></detector-control>
+  <div class="solution-header">We think we found you a solution!</div>
+  <div class="solution-description">Customers with similar issues recently were able to solve it by following the solutions below.</div>
+  <detector-container *ngIf="displayDetectorContainer && keywordsSolutionView" [detector]="keywordsDetectorId"
+    [hideDetectorControl]="true" [isKeystoneSolution]="true" [isAnalysisView]="true"></detector-container>
+
+<keystone-view-container [solutionTitle]="keystoneDetectorTitle" [isRecommended]="false" [detector]="analysisDetector" [isAnalysisView]="true" [isKeystoneDetector]="false">
+  <detector-container *ngIf="displayDetectorContainer" [detector]="analysisDetector" [hideDetectorControl]=true
+    [isAnalysisView]="true" (downTimeChanged)="onDowntimeChanged($event)"></detector-container>
+  <div *ngIf="showSearchBar" class="search-box">
     <span>Diagnostics based on </span>
     <div class="search-input-box">
-      <input id="caseSubmissionFlowSearchBar" placeholder="Describe your problem and hit enter" (click)="focusSearch()" class="search-input" [(ngModel)]="searchTerm" (keyup.enter)="triggerSearch()" [style.backgroundColor]="searchBarFocus? 'transparent': ''" maxlength="140">
+      <input id="caseSubmissionFlowSearchBar" placeholder="Describe your problem and hit enter" (click)="focusSearch()"
+        class="search-input" [(ngModel)]="searchTerm" (keyup.enter)="triggerSearch()"
+        [style.backgroundColor]="searchBarFocus? 'transparent': ''" maxlength="140">
       <i class="fa fa-search search-icon" (click)="focusSearch()"></i>
-      <i class="fa fa-exclamation icon-err" [style.display]="searchTerm?.trim().length>0 && searchTerm?.trim().length<2? '': 'none'" title="At least 2 characters"></i>
+      <i class="fa fa-exclamation icon-err"
+        [style.display]="searchTerm?.trim().length>0 && searchTerm?.trim().length<2? '': 'none'"
+        title="At least 2 characters"></i>
     </div>
-</div>
+  </div>
 
-<detector-list-analysis #detectorListAnalysis detectorParmName="detectorName" [resourceId]="resourceId" [targetedScore]="targetedScore" [analysisId]="analysisId" [searchTerm]="searchTerm" [searchMode]="searchMode" (onComplete)="updateLoadingStatus($event)"></detector-list-analysis>
+  <detector-list-analysis #detectorListAnalysis detectorParmName="detectorName" [resourceId]="resourceId"
+    [targetedScore]="targetedScore" [analysisId]="analysisId" [searchTerm]="searchTerm" [searchMode]="searchMode"
+    (onComplete)="updateLoadingStatus($event)"></detector-list-analysis>
 
-<div  *ngIf="searchMode !== SearchAnalysisMode.Genie && detectorListAnalysis.inDrillDownMode" >
-  <router-outlet></router-outlet>
-</div>
+  <div *ngIf="searchMode !== SearchAnalysisMode.Genie && detectorListAnalysis.inDrillDownMode">
+    <router-outlet></router-outlet>
+  </div>
 
-<div *ngIf="searchMode !== SearchAnalysisMode.Genie" class = "cxp-chat-launcher-container align-width">
-  <cxp-chat-launcher *ngIf="showChatButton()" [trackingId] = "cxpChatTrackingId" [chatUrl] = "cxpChatUrl" [supportTopicId] = "supportTopicId" ></cxp-chat-launcher>
+  <div *ngIf="searchMode !== SearchAnalysisMode.Genie" class="cxp-chat-launcher-container align-width">
+    <cxp-chat-launcher *ngIf="showChatButton()" [trackingId]="cxpChatTrackingId" [chatUrl]="cxpChatUrl"
+      [supportTopicId]="supportTopicId"></cxp-chat-launcher>
+  </div>
+  </keystone-view-container>
 </div>
+<ng-template #genericAnalysisView>
+  <detector-container *ngIf="displayDetectorContainer && keywordsSolutionView" [detector]="keywordsDetectorId"
+    [hideDetectorControl]='keywordsSolutionView' [isAnalysisView]="true" (downTimeChanged)="onDowntimeChanged($event)">
+  </detector-container>
+
+  <detector-container *ngIf="displayDetectorContainer" [detector]="analysisDetector"
+    [hideDetectorControl]='true' [isAnalysisView]="true"
+    (downTimeChanged)="onDowntimeChanged($event)"></detector-container>
+  <div *ngIf="showSearchBar" class="search-box">
+    <span>Diagnostics based on </span>
+    <div class="search-input-box">
+      <input id="caseSubmissionFlowSearchBar" placeholder="Describe your problem and hit enter" (click)="focusSearch()"
+        class="search-input" [(ngModel)]="searchTerm" (keyup.enter)="triggerSearch()"
+        [style.backgroundColor]="searchBarFocus? 'transparent': ''" maxlength="140">
+      <i class="fa fa-search search-icon" (click)="focusSearch()"></i>
+      <i class="fa fa-exclamation icon-err"
+        [style.display]="searchTerm?.trim().length>0 && searchTerm?.trim().length<2? '': 'none'"
+        title="At least 2 characters"></i>
+    </div>
+  </div>
+
+  <detector-list-analysis #detectorListAnalysis detectorParmName="detectorName" [resourceId]="resourceId"
+    [targetedScore]="targetedScore" [analysisId]="analysisId" [searchTerm]="searchTerm" [searchMode]="searchMode"
+    (onComplete)="updateLoadingStatus($event)"></detector-list-analysis>
+
+  <div *ngIf="searchMode !== SearchAnalysisMode.Genie && detectorListAnalysis.inDrillDownMode">
+    <router-outlet></router-outlet>
+  </div>
+
+  <div *ngIf="searchMode !== SearchAnalysisMode.Genie" class="cxp-chat-launcher-container align-width">
+    <cxp-chat-launcher *ngIf="showChatButton()" [trackingId]="cxpChatTrackingId" [chatUrl]="cxpChatUrl"
+      [supportTopicId]="supportTopicId"></cxp-chat-launcher>
+  </div>
+</ng-template>
