--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.scss
@@ -22,7 +22,7 @@
   position: absolute;
   cursor: pointer;
 }
-  
+
 .search-icon{
   font-size: 15px;
   color: gray;
@@ -31,7 +31,7 @@
   position: absolute;
   cursor: pointer;
 }
-  
+
 .search-box{
   display: block;
   height: 55px;
@@ -41,7 +41,7 @@
   margin-right: 16px;
   border-bottom: 1px solid #ddd;
 }
-  
+
 ::placeholder {
   color: #848080;
 }
@@ -52,4 +52,46 @@
 
 .align-width {
   width:98%;
+}
+
+.solution-header {
+    width: 250px;
+    height: 22px;
+    left: 20px;
+    top: 552px;
+    font-family: Segoe UI;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    color: #323130;
+}
+
+.solution-description {
+    width: 858px;
+    height: 44px;
+    left: 20px;
+    top: 570px;
+
+    /* msportalfx-text- / body */
+
+    font-family: Segoe UI;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 18px;
+    /* or 138% */
+
+    display: flex;
+    align-items: center;
+
+    /* Light Theme / Text colors / Primary */
+
+    color: #323130;
+}
+
+.keyword-solution-container {
+    margin: 20px;
 }
