--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-container/detector-container.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-container/detector-container.component.html
@@ -1,5 +1,5 @@
 <detector-control *ngIf="(!hideDetectorControl && !hideTimerPicker && detectorResponse && !analysisMode) || isPopoutFromAnalysis"></detector-control>
-<div [ngStyle]="{'padding-top': hideTimerPicker? '10px': '0px', 'min-height.px': isPublic? '0': '240'}" style="padding-left: 20px; padding-right: 20px;"  >
+<div [ngStyle]="{'padding-top': hideTimerPicker? '10px': '0px', 'min-height.px': isPublic? '0': '240', 'padding-left': isKeystoneSolution? '0px' : '20px', 'padding-right': isKeystoneSolution? '0px' : '20px'}" style="padding-right: 20px;"  >
   <detector-view [analysisMode]="analysisMode" [isAnalysisView]="isAnalysisView" [detectorResponse]="detectorResponse" [error]="error" [startTime]="getStartTime" [endTime]="getEndTime"
    [developmentMode]="false" [detector]="detectorName" (downTimeChanged)="onDowntimeChanged($event)" (XAxisSelection)="onXAxisSelection($event)" [hideDetectorHeader]="hideDetectorControl"
    [isCategoryOverview]="isCategoryOverview" [isPopoutFromAnalysis]="isPopoutFromAnalysis">
