Add logic to handle analysis navigation

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="keywordsSolutionView else genericAnalysisView" class="keyword-solution-container">
-  <detector-control *ngIf="keywordsSolutionView"></detector-control>
+<div *ngIf="keystoneSolutionView else genericAnalysisView" class="keyword-solution-container">
+  <detector-control></detector-control>
   <div class="solution-header">We think we found you a solution!</div>
   <div class="solution-description">Customers with similar issues recently were able to solve it by following the solutions below.</div>
-  <detector-container *ngIf="displayDetectorContainer && keywordsSolutionView" [detector]="keywordsDetectorId"
+  <detector-container [detector]="keystoneDetectorId"
     [hideDetectorControl]="true" [isKeystoneSolution]="true" [isAnalysisView]="true"></detector-container>
 
 <keystone-view-container [solutionTitle]="keystoneDetectorTitle" [isRecommended]="false" [detector]="analysisDetector" [isAnalysisView]="true" [isKeystoneDetector]="false">
@@ -22,7 +22,7 @@
   </div>
 
   <detector-list-analysis #detectorListAnalysis detectorParmName="detectorName" [resourceId]="resourceId"
-    [targetedScore]="targetedScore" [analysisId]="analysisId" [searchTerm]="searchTerm" [searchMode]="searchMode"
+    [targetedScore]="targetedScore" [analysisId]="analysisId" [searchTerm]="searchTerm" [searchMode]="searchMode" [keystoneSolutionView]="keystoneSolutionView"
     (onComplete)="updateLoadingStatus($event)"></detector-list-analysis>
 
   <div *ngIf="searchMode !== SearchAnalysisMode.Genie && detectorListAnalysis.inDrillDownMode">
@@ -35,13 +35,10 @@
   </div>
   </keystone-view-container>
 </div>
-<ng-template #genericAnalysisView>
-  <detector-container *ngIf="displayDetectorContainer && keywordsSolutionView" [detector]="keywordsDetectorId"
-    [hideDetectorControl]='keywordsSolutionView' [isAnalysisView]="true" (downTimeChanged)="onDowntimeChanged($event)">
-  </detector-container>
 
+<ng-template #genericAnalysisView>
   <detector-container *ngIf="displayDetectorContainer" [detector]="analysisDetector"
-    [hideDetectorControl]='true' [isAnalysisView]="true"
+    [hideDetectorControl]='isCaseSubmissionSolutionIFrame' [isAnalysisView]="true"
     (downTimeChanged)="onDowntimeChanged($event)"></detector-container>
   <div *ngIf="showSearchBar" class="search-box">
     <span>Diagnostics based on </span>
