--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -50,7 +50,7 @@
     <hr>
   </div>
 
-  <br *ngIf="isInCaseSubmission()">
+  <br *ngIf="isInCaseSubmission() && !isKeystoneView">
 
   <div *ngIf="isAnalysisView && supportsDownTime" class="dynamic-data-container">
     <div class="downtime-container">
