--- a/AngularApp/projects/diagnostic-data/src/lib/components/keystone-insight/keystone-insight.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/keystone-insight/keystone-insight.component.scss
@@ -37,7 +37,16 @@
     padding-left:5px;
 }
 
-.keystone-insight-description {
+.keystone-content {
     margin-left: 40px;
     margin-right: 40px;
+}
+
+.table-key {
+    width: 20%;
+}
+
+
+.keystone-solution-title {
+    font-weight: bold;
 }
