--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-container/detector-container.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-container/detector-container.component.html
@@ -1,6 +1,6 @@
 <detector-control *ngIf="(!hideDetectorControl && !hideTimerPicker && detectorResponse && !analysisMode) || isPopoutFromAnalysis"></detector-control>
-<div [ngStyle]="{'padding-top': hideTimerPicker? '10px': '0px', 'min-height.px': isPublic? '0': '240', 'padding-left': isKeystoneSolution? '0px' : '20px', 'padding-right': isKeystoneSolution? '0px' : '20px'}" style="padding-right: 20px;"  >
-  <detector-view [analysisMode]="analysisMode" [isAnalysisView]="isAnalysisView" [detectorResponse]="detectorResponse" [error]="error" [startTime]="getStartTime" [endTime]="getEndTime"
+<div [ngClass]="{'keystone-detector-container': isKeystoneSolution}" [ngStyle]="{'padding-top': hideTimerPicker? '10px': '0px', 'min-height.px': isPublic? '0': '240'}" class="detector-view-container">
+  <detector-view [analysisMode]="analysisMode" [isKeystoneView]="isKeystoneSolution" [isAnalysisView]="isAnalysisView" [detectorResponse]="detectorResponse" [error]="error" [startTime]="getStartTime" [endTime]="getEndTime"
    [developmentMode]="false" [detector]="detectorName" (downTimeChanged)="onDowntimeChanged($event)" (XAxisSelection)="onXAxisSelection($event)" [hideDetectorHeader]="hideDetectorControl"
    [isCategoryOverview]="isCategoryOverview" [isPopoutFromAnalysis]="isPopoutFromAnalysis">
   </detector-view>
