--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution-view-container/solution-view-container.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution-view-container/solution-view-container.component.scss
@@ -1,11 +1,11 @@
-.keyword-solution-container {
+.solution-view-container {
     padding: 13px;
     border: 1px solid #C8C6C4;
     box-sizing: border-box;
     margin-top: 18px;
 }
 
-.keyword-container-title {
+.solution-container-title {
     font-family: Segoe UI;
     font-style: normal;
     font-weight: 600;
@@ -18,7 +18,7 @@
     color: #000000;
 }
 
-.keyword-title-label {
+.solution-title-label {
     font-family: Segoe UI;
     font-style: normal;
     font-weight: 600;
@@ -33,19 +33,19 @@
     background: #F0F6FF;
 }
 
-.keyword-title {
+.solution-title {
     padding-left:5px;
 }
 
-.keystone-feedback-message {
+.solution-feedback-message {
     text-align: right;
 }
 
-.keystone-feedback-label {
+.solution-feedback-label {
     margin-right: 10px;
 }
 
-.keystone-feedback-button {
+.solution-feedback-button {
     margin-right: 5px;
     text-decoration: none;
 }
