--- a/AngularApp/projects/diagnostic-data/src/lib/components/checker-list/checker-list.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/checker-list/checker-list.component.scss
@@ -7,7 +7,7 @@
     font-size: 15px;
     cursor: pointer;
     display: flex;
-    align-items: baseline;
+    align-items: center;
     border-bottom: 1px solid #b5b5b5;
     min-height: 30px;
 }
@@ -32,13 +32,12 @@
     margin-left: -1px;
 }
 
-
 .status-icon {
-    margin-top: 3px;
+    margin-top: 1px;
     width: fit-content;
     display: flex;
     align-items: center;
-    padding-left: 10px;
+    padding-left: 1px;
     width: 70px;
     height:100%;
 }
@@ -47,6 +46,7 @@
     color: #828282;
     font-size: 16px;
 }
+
 
 
 .list-wrapper {
